--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
         <module>ChatServer</module>
     </modules>
 
+    <dependencies>
+         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.8.Final</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
