--- a/ChatClient/pom.xml
+++ b/ChatClient/pom.xml
@@ -18,4 +18,9 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
